2008-09-07	jannis

	* dialogs/keyboard-settings/frap-shortcuts.{c,h}, 
	  dialogs/keyboard-settings/frap-shortcuts.{c,h},
	  xfce4-settings-helper/Makefile.am,
	  xfce4-settings-helper/frap-shortcuts.{c,h}: Update to most recent
	  libfrap version.
	* xfce4-settings-helper/keyboard-shortcuts.c: Port the keyboard helper to
	  libfrap. 

2008-09-07	jannis

	* dialogs/keyboard-settings/Makefile.am,
	  dialogs/keyboard-settings/frap-shortcuts.{c,h},
		dialogs/keyboard-settings/frap-shortcuts-dialog.{c,h},
		dialogs/keyboard-settings/main.c: Import frap utility functions and
		shortcut dialog into xfce4-settings. Modify the keyboard settings dialog
		so that it makes use of them. Make even better use of the xfconf 
		'property-changed' signal by adding/removing rows from the shortcuts tree
		view when necessary.
	* dialogs/keyboard-settings/shortcut-dialog.{c,h}: Remove this one as it is
	  now replaced by FrapShortcutsDialog.
		
2008-09-06	jannis

	* dialogs/keyboard-settings/main.c: Add support for the
	  'property-changed' signal of the XfconfChannel. Update shortcuts and
	  actions whenever a property changes. Improve conflict resolving,
	  shorten the dialog messages. 
	* TODO: Add some notes for the final release.

2008-09-06  stephan

	* xfce4-settings-editor/main.c:
	  Improve the settings-editor
	* xfce4-settings-editor/main.c,
	  xfce4-settings-editor/xfce4-settings-editor.glade:
	  Modify xfce4-settings-editor to display all channels, and their
	  properties

2008-09-06  jannis

	* po/ChangeLog, po/nl.po, po/pt_BR.po, po/xfce4-settings.pot:
	  * *.po, xfce4-settings.pot: Merge new strings.
	* ChangeLog, dialogs/keyboard-settings/main.c:
	  * dialogs/keyboard-settings/main.c: Add two new methods
	  keyboard_settings_request_confirmation() and
	  read_shortcut_property() for handling conflicts with xfwm4
	  shortcuts. Provide nice 'please choose between A and B' dialogs
	  in case we are able to resolve these conflicts via xfconf. The