@@ -1,5 +1,11 @@
 2008-09-07	jannis
 
+	* dialogs/keyboard-settings/frap-shortcuts-dialog.c: Update the dialog. It
+	  now uses XfceTitledDialog as a parent and also displays the partial
+	  shortcut while being entered - cool!
+
+2008-09-07	jannis
+
 	* dialogs/keyboard-settings/frap-shortcuts.{c,h}, 
 	  dialogs/keyboard-settings/frap-shortcuts.{c,h},
 	  xfce4-settings-helper/Makefile.am,
